Fixed layout issue for some comp. displays

--- a/games/Dodge/style.css
+++ b/games/Dodge/style.css
@@ -20,7 +20,7 @@ html, body {
 #source {
   position: absolute;
   background: #fff;
-  width: 290px;
+  width: 300px;
   height: 88px;
   margin-top: 200px;
   margin-left: 30px;
@@ -37,7 +37,7 @@ html, body {
 
 #source p {
   float: right;
-  margin: 32px;
+  margin: 32px 38px 0 0;
   font-size: 20px;
 }
 
